--- a/webPay.csproj
+++ b/webPay.csproj
@@ -7,12 +7,20 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="bootbox" Version="4.3.0" />
+      <PackageReference Include="Bootbox.JS" Version="5.5.2" />
+      <PackageReference Include="bootstrap" Version="5.3.3" />
+      <PackageReference Include="jQuery" Version="3.7.1" />
+      <PackageReference Include="jquery.datatables" Version="1.10.15" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.0-preview.6.24328.4" />
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
